# mtm-python-oop

./: CHANGELOG.md  LICENSE  README.md  TODO.txt  requirements.txt  setup.cfg  setup.py  test.py  test_pytest.py
MTM/: Detection.py  __init__.py
src/mtm/: __init__.py  detection.py  nms.py
tutorials/: InteractiveParameters.ipynb  NoiseBenchmark.ipynb  Tutorial1-Introduction.ipynb  Tutorial2-Template_Augmentation.ipynb  Tutorial3-SpeedingUp.ipynb
