[metadata]
name = mtm-oop
version = attr: mtm.__version__
author = Laurent Thomas
author_email = laurent132.thomas@laposte.net
description = Object-recognition in images using multiple templates (object-oriented implementation).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/multi-template-matching/mtm-python-oop
project_urls =
    Bug Tracker = https://github.com/multi-template-matching/mtm-python-oop/issues
classifiers =
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License        
        Operating System :: OS Independent
        Topic :: Scientific/Engineering :: Image Recognition
        Intended Audience :: Science/Research

[options]
package_dir =
    = src
packages = find:
python_requires = >=3
install_requires =
    numpy
    scikit-image
    shapely
    matplotlib

[options.packages.find]
where = src